--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
