--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.14.0",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
