--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
