--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,7 +26,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.14.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.1.12"
   },
   "devDependencies": {
